CancerEvolutionVisualization 3.0.0 2024-05-07 (Dan Knight)

ADDED
* Dendrogram mode with node-by-node control
* Optional "spread" column to control node/branch spacing
* Plotting functions to visualize the distribution of clones across the genome.
  
UPDATE
* Fixed angle calculation bug where child angles do not follow
  their parent angle, instead moving "downward" at 0 degrees.
* Updated package metadata and README

CancerEvolutionVisualization 2.0.2 2024-04-09 (Dan Knight)

BUG
* Fixed angle calculation bug where child angles do not follow
  their parent angle, instead moving "downward" at 0 degrees.
* Set default parameters for heatmaps, defaulting too BPG defaults unless necessary

--------------------------------------------------------------------------
CancerEvolutionVisualization 2.0.1 2023-11-17 (Helena Winata, Dan Knight)

ADDED
* GitHub links for code and bug reports

BUG
* Fixed S3 naming conflict in heatmap functions, using safe "create." prefix


--------------------------------------------------------------------------
CancerEvolutionVisualization 2.0.0 2023-11-16 (Helena Winata, Dan Knight)

ADDED
* Option to specify edge colour with "edge.col.1" and "edge.col.2" 
  columns in tree input dataframe
* Option to specify edge width using "edge.width.1" and "edge.width.2" 
  columns in tree input dataframe
* Option to specify edge linetype with "edge.type.1" and "edge.type.2" 
  columns in tree input dataframe
* Support for specifying tree angles in either radians or degrees using
  an optional "angle" column
* Generic functions to generate accompanying heatmaps
* Option to specify tree node colours with "node.col" column
* Option to specify tree node border colour, width, and line-type with 
  "border.col", "border.width", and "border.type" columns
* Option ot specify tree node label colour with "node.label.col" column

UPDATE
* Reimplemented tree angle calculations
* Fixed lopsided radial tree bug

REMOVED